Dosc and code cleanup.